--- a/config/application.yml
+++ b/config/application.yml
@@ -1,1 +1,3 @@
 google_maps_api_key: AIzaSyAniY-OHZbqxq-TeJRFlbriaRaXwWGmFpU
+gmail_usernam:  bandaide015@gmail.com
+gmail_password:  666metalica666
