--- a/config/database.yml
+++ b/config/database.yml
@@ -6,24 +6,34 @@
 #
 
 development:
-  adapter: sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: bandaide_production
   pool: 5
-  timeout: 5000
-  database: db/development.sqlite3
+  user:  bandaide
+  password:  password
+  host:  localhost
+  port: 5432
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: bandaide_production
   pool: 5
-  timeout: 5000
-  database: db/test.sqlite3
+  user:  bandaide
+  password:  password
+  host:  localhost
+  port: 5432
 
 production:
   adapter: postgresql
   encoding: unicode
-  database: db/bandaide_production
+  database: bandaide_production
   pool: 5
   user:  bandaide
   password:  password
+  host:  localhost
+  port: 5432
