--- a/config/database.yml
+++ b/config/database.yml
@@ -10,6 +10,8 @@ development:
   encoding: unicode
   database: bandaide_production
   pool: 5
+  user:  bandaide
+  password:  password
   host:  localhost
   port: 5432
 
@@ -21,6 +23,8 @@ test:
   encoding: unicode
   database: bandaide_production
   pool: 5
+  user:  bandaide
+  password:  password
   host:  localhost
   port: 5432
 
