Added functionality to filter band and musicians on home page based on criteria on aside

--- a/config/database.yml
+++ b/config/database.yml
@@ -12,6 +12,8 @@ development:
   pool: 5
   host:  localhost
   port: 5432
+  user:  bandaide
+  password:  password
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -23,6 +25,8 @@ test:
   pool: 5
   host:  localhost
   port: 5432
+  user:  bandaide
+  password:  password
 
 production:
   adapter: postgresql
@@ -31,3 +35,5 @@ production:
   pool: 5
   host:  localhost
   port: 5432
+  user:  bandaide
+  password:  password
