--- a/config/database.yml
+++ b/config/database.yml
@@ -31,5 +31,5 @@ production:
   encoding: unicode
   database: bandaide_production
   pool: 5
-  host:  localhost
-  port: 5432
+  # host:  localhost
+  # port: 5432
